# mpl

./: CMakeLists.txt
Tests/: CMakeLists.txt  main.c  testbitset.c  testbitset.h  testharddat.h  testio.cpp  testio.h  testmplbbreak.c  testmplbbreak.h  testmplcontree.c  testmplcontree.h  testmplmatrix.c  testmplmatrix.h  testmplnode.c  testmplnwkreader.c  testmplparsimony.c  testmplparsimony.h  testmplstepwise.c  testmplstepwise.h  testmpltopol.c  testmpltopol.h  testmpltree.c  testmpltree.h  testmpltreelist.c  testmplutils.h  testparsshortcut.c  testparsshortcut.h  testtaxblock.c  testtaxblock.h  testtdraw.c  testtdraw.h  testutils.c  testutils.h
src/: CMakeLists.txt  mpl.c  mpl_bitset.c  mpl_bitset.h  mpl_defs.h  mpl_error.c  mpl_error.h  mpl_utils.c  mpl_utils.h
src/Analysis/: mpl_bbreak.c  mpl_bbreak.h  mpl_scoretree.c  mpl_scoretree.h  mpl_search.c  mpl_search.h  mpl_stepwise.c  mpl_stepwise.h
src/Characters/: mpl_charbuf.c  mpl_charbuf.h  mpl_chardefs.h  mpl_charinfo.c  mpl_charinfo.h  mpl_matrix.c  mpl_matrix.h  mpl_parsim.c  mpl_parsim.h  mpl_pkbuf.c  mpl_pkbuf.h
src/New Group/: mpl_cblock.c  mpl_cblock.h
src/Results/: mpl_contree.c  mpl_contree.h  mpl_results.h  mpl_tdraw.c  mpl_tdraw.h
src/Search/: mpl_search.h
src/Taxa/: mpl_taxblock.c  mpl_taxblock.h  mpl_taxoninfo.c  mpl_taxoninfo.h
src/Tests/: main.c  mpltest.h  testmplnode.c  testmpltree.c  testmpltree.h
src/Trees/: mpl_bipartlist.c  mpl_bipartlist.h  mpl_cluster.c  mpl_cluster.h  mpl_newick_rdr.c  mpl_newick_rdr.h  mpl_node.c  mpl_node.h  mpl_topol.c  mpl_topol.h  mpl_tree.c  mpl_tree.h  (+2 more)
(+102 files in other folders)
